[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Kenney High Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=2]
[ext_resource path="res://Menus/Settings.gd" type="Script" id=3]
[ext_resource path="res://Themes/UI_Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/UI_ProgressBar_BG.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/UI_ProgressBar_FG.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 25
alignment = 1

[node name="TitleText" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
margin_left = 424.0
margin_top = 53.0
margin_right = 599.0
margin_bottom = 107.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 4
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[rainbow freq=0.2
 sat=0.7 val=1]SETTINGS[/rainbow]"
text = "SETTINGS"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master Volume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 232.0
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Master Volume"]
margin_left = 37.0
margin_right = 437.0
margin_bottom = 100.0

[node name="SettingTitle" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Master Volume/VBoxContainer"]
margin_right = 400.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "Master Volume"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Master Volume/VBoxContainer"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/Master Volume/VBoxContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 2 )
custom_styles/fg = ExtResource( 6 )
custom_styles/bg = ExtResource( 5 )
step = 1.0
value = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="Button" parent="PanelContainer/VBoxContainer/Master Volume"]
margin_left = 487.0
margin_top = 66.0
margin_right = 587.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 8
theme = ExtResource( 2 )
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Master Volume"]
margin_left = 637.0
margin_top = 8.0
margin_right = 987.0
margin_bottom = 92.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
text = "Set the maximum volume value for:
- Music
- SFX"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Volume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 257.0
margin_right = 1024.0
margin_bottom = 357.0
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Music Volume"]
margin_left = 37.0
margin_right = 437.0
margin_bottom = 100.0

[node name="SettingTitle" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Music Volume/VBoxContainer"]
margin_right = 400.0
margin_bottom = 36.0
rect_min_size = Vector2( 175, 0 )
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "Music Volume"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Music Volume/VBoxContainer"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/Music Volume/VBoxContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 2 )
custom_styles/fg = ExtResource( 6 )
custom_styles/bg = ExtResource( 5 )
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="Button" parent="PanelContainer/VBoxContainer/Music Volume"]
margin_left = 487.0
margin_top = 66.0
margin_right = 587.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 8
theme = ExtResource( 2 )
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingTitle2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Music Volume"]
margin_left = 637.0
margin_top = 36.0
margin_right = 987.0
margin_bottom = 64.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
text = "Set the Music volume value"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX Volume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 1024.0
margin_bottom = 482.0
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/SFX Volume"]
margin_left = 37.0
margin_right = 437.0
margin_bottom = 100.0

[node name="SettingTitle" type="RichTextLabel" parent="PanelContainer/VBoxContainer/SFX Volume/VBoxContainer"]
margin_right = 400.0
margin_bottom = 36.0
rect_min_size = Vector2( 175, 0 )
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
text = "SFX Volume"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SFX Volume/VBoxContainer"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/SFX Volume/VBoxContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 2 )
custom_styles/fg = ExtResource( 6 )
custom_styles/bg = ExtResource( 5 )
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="Button" parent="PanelContainer/VBoxContainer/SFX Volume"]
margin_left = 487.0
margin_top = 66.0
margin_right = 587.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 8
theme = ExtResource( 2 )
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingTitle2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/SFX Volume"]
margin_left = 637.0
margin_top = 36.0
margin_right = 987.0
margin_bottom = 64.0
rect_min_size = Vector2( 350, 0 )
rect_clip_content = false
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
text = "SET THE SFX VOLUME VALUE"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 262.0
margin_top = 507.0
margin_right = 762.0
margin_bottom = 547.0
rect_min_size = Vector2( 500, 40 )
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Master Volume/VBoxContainer/VolumeSlider" to="." method="_on_MasterVolume_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Master Volume/MuteButton" to="." method="_on_MasterVolume_Mute"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Music Volume/VBoxContainer/VolumeSlider" to="." method="_on_MusicVolume_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Music Volume/MuteButton" to="." method="_on_MusicVolume_Mute"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/SFX Volume/VBoxContainer/VolumeSlider" to="." method="_on_SFXVolume_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SFX Volume/MuteButton" to="." method="_on_SFXVolume_Mute"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
